--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,6 @@
   box-sizing: border-box;
 }
 body {
-  height: 100vh;
   margin: 0;
   font-family: 'Poppins', sans-serif;
 }
